--- a/package.json
+++ b/package.json
@@ -63,10 +63,15 @@
     "@types/node-int64": "^0.4.30",
     "@types/thrift": "^0.10.14",
     "@types/varint": "^6.0.1",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/eslint-plugin-tslint": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
     "assert": "^2.1.0",
     "brotli": "^1.3.3",
     "chai": "^4.3.10",
     "debug": "^4.3.4",
+    "eslint": "^8.50.0",
+    "eslint-config-prettier": "^9.0.0",
     "jest": "^29.7.0",
     "jest-environment-node": "^29.7.0",
     "lz4js": "^0.2.0",
